src/test/deca/syntax/invalid/ClassSansNom.deca
//Classe sans nom =>erreur

class extends Objets{
}
